--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Jayabratha | MyPortfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16" />
 </head>
+
 <body>
   <app-root>
     <div class="loading-icon">
@@ -14,4 +17,5 @@
     </div>
   </app-root>
 </body>
+
 </html>
