--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,14 @@
   <meta charset="utf-8">
   <title>Jayabratha | MyPortfolio</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="msapplication-starturl" content="/">
+  <meta name="theme-color" content="#454545">
   <link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16" />
+  <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
@@ -16,6 +21,18 @@
       <i class="icon-load-c"></i>
     </div>
   </app-root>
+  
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js')
+      .then((registration) => {
+        console.log('SW registered');
+      })
+      .catch((err) => {
+        console.log('SW error', err);
+      });
+    }
+  </script>
 </body>
 
 </html>
