--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,8 @@
         });
     }
   </script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js"> -->
+  </script>
 </body>
 
 </html>
