--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
 
 <head>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131214369-1"></script>
